💄 fixed model list card preview clipping too much

--- a/files/scss/origin.scss
+++ b/files/scss/origin.scss
@@ -474,7 +474,7 @@ main {
         & > .card {
             justify-content: center;
             flex-wrap: wrap;
-            max-height: 3.5em;
+            max-height: 5.25em;
         }
     }
 
